[gd_scene load_steps=18 format=3 uid="uid://cms3n8a30fqj1"]

[ext_resource type="PhysicsMaterial" uid="uid://c6sxmabh08xgd" path="res://autoload/rolln_around/level/objects/player/player.phymat" id="1_at4nu"]
[ext_resource type="Script" uid="uid://87fujd5kduha" path="res://autoload/rolln_around/level/objects/player/player.gd" id="1_yqovl"]
[ext_resource type="PackedScene" uid="uid://dx7pd8wprs3h3" path="res://autoload/rolln_around/level/objects/player/cosmetics/ball/cosmetics/default/default.tscn" id="3_h84xj"]
[ext_resource type="PackedScene" uid="uid://xqevxawy7757" path="res://autoload/rolln_around/level/objects/vertical_display/vertical_display.tscn" id="4_xhncl"]
[ext_resource type="Material" uid="uid://bv1x2m8up02h6" path="res://autoload/rolln_around/level/objects/player/res/ring.material" id="7_bhqrw"]
[ext_resource type="Material" uid="uid://urtk7gg1u402" path="res://autoload/rolln_around/level/objects/player/res/ring_jump_2.material" id="8_guur0"]
[ext_resource type="Material" uid="uid://6ehdf1eykj4v" path="res://autoload/rolln_around/level/objects/player/res/ring_regain_jump.material" id="8_pde4a"]
[ext_resource type="Material" uid="uid://b0p0ifp0jgao6" path="res://autoload/rolln_around/level/objects/player/res/ring_jump.material" id="8_ybgir"]
[ext_resource type="PackedScene" uid="uid://bhuidbk1eca64" path="res://autoload/rolln_around/level/objects/player/cosmetics/jump_ring/cosmetics/default/default.tscn" id="10_e8t7q"]
[ext_resource type="Material" uid="uid://bl0brywuuegf8" path="res://autoload/rolln_around/level/objects/player/res/ring_regain_jump_2.material" id="11_r4t65"]
[ext_resource type="Script" uid="uid://jwk3b7bvbkpf" path="res://autoload/rolln_around/level/objects/player/jumping.gd" id="11_rdsgs"]

[sub_resource type="Curve" id="Curve_rrlfa"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(0.126582, 0.645455), 0.538636, 0.538636, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SphereShape3D" id="SphereShape3D_tu1x1"]

[sub_resource type="Animation" id="Animation_aeicm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_bhqrw")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ldfo2"]
resource_name = "jump"
length = 0.075
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.055, 0.075),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.95, 1.95, 1.95), Vector3(2, 2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("7_bhqrw"), ExtResource("8_guur0"), ExtResource("8_ybgir")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.075),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bka2b"]
resource_name = "regain_jump"
length = 0.075
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.065, 0.075),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(2, 2, 2), Vector3(1.95, 1.95, 1.95), Vector3(0.75, 0.75, 0.75), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("8_pde4a"), ExtResource("11_r4t65"), ExtResource("7_bhqrw")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5262n"]
_data = {
&"RESET": SubResource("Animation_aeicm"),
&"jump": SubResource("Animation_ldfo2"),
&"regain_jump": SubResource("Animation_bka2b")
}

[node name="Player" type="RigidBody3D"]
collision_layer = 2
mass = 2.0
physics_material_override = ExtResource("1_at4nu")
gravity_scale = 0.75
can_sleep = false
continuous_cd = true
max_contacts_reported = 4
contact_monitor = true
script = ExtResource("1_yqovl")
modifier_modifier_curve = SubResource("Curve_rrlfa")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_tu1x1")

[node name="BallCosmetic" parent="." instance=ExtResource("3_h84xj")]

[node name="Reset3D" type="Node" parent="."]

[node name="PlayerLocation" type="Node3D" parent="Reset3D"]
unique_name_in_owner = true

[node name="FloorRayCast" type="RayCast3D" parent="Reset3D/PlayerLocation"]
unique_name_in_owner = true
target_position = Vector3(0, -0.55, 0)
debug_shape_thickness = 4

[node name="NoWallJumpRayCast" type="RayCast3D" parent="Reset3D/PlayerLocation"]
unique_name_in_owner = true
target_position = Vector3(0, -1.3, 0)
debug_shape_custom_color = Color(0.454902, 0, 1, 1)
debug_shape_thickness = 4

[node name="VerticalDisplay" parent="Reset3D/PlayerLocation" instance=ExtResource("4_xhncl")]

[node name="JumpRingCosmetic" parent="Reset3D/PlayerLocation" instance=ExtResource("10_e8t7q")]

[node name="JumpRingAnimationPlayer" type="AnimationPlayer" parent="Reset3D/PlayerLocation"]
unique_name_in_owner = true
root_node = NodePath("../JumpRingCosmetic")
libraries = {
"": SubResource("AnimationLibrary_5262n")
}

[node name="RecentWallTouchTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="Jumping" type="Node" parent="."]
script = ExtResource("11_rdsgs")

[node name="JumpBufferTimer" type="Timer" parent="Jumping"]
wait_time = 0.25
one_shot = true

[node name="ShortHopTimer" type="Timer" parent="Jumping"]
wait_time = 0.09
one_shot = true

[node name="RecentlyJumpedTimer" type="Timer" parent="Jumping"]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="RecentWallTouchTimer" to="." method="_on_recent_wall_touch_timer_timeout"]
[connection signal="timeout" from="Jumping/ShortHopTimer" to="Jumping" method="_on_short_hop_timer_timeout"]
